add index.html and css files

--- a/index.html
+++ b/index.html
@@ -1,47 +1,52 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
-    <head>
-      <title>Ebrahims First Website</title>
-      <link rel="stylesheet" href="style.css">
-    </head>
+ <head>
+   <title>Ebrahims First website</title>
+   <link rel="stylesheet" href="style.css" />
+ </head>
 
-    <body>
-      <!-- All content goes here-->
-      <div id="all-contents"> 
-        <nav>
-         <h1>Ebrahims First Website</h1>
-           <ul id="nav-ul">
-             <li class="nav-li">
-              <a href="index.html"> Home </a>
-            </li>
-            <li class="nav-li">
-               <a href="portfolio.html"> Portfolio </a>
-           </li>
-          </ul>
-      </nav>
 
-      <main>
-        <!-- Sidebar section -->
+ <body>
+   <!-- All content goes here-->
+   <div id="all-contents">
+     <nav>
+       <h1>Ebrahims First Website</h1>
+       <ul id="nav-ul">
+         <li class="nav-li">
+           <a href="index.html"> Home </a>
+         </li>
+         <li class="nav-li">
+           <a href="portfolio.html"> Portfolio </a>
+         </li>
+       </ul>
+     </nav>
+
+
+     <main>
+       <!-- Sidebar section -->
        <div class="sidebar">
-        <img class="sidebar-img" src="https://i.ytimg.com/vi/6y4eNROcFik/maxresdefault.jpg">
-        <h2> Ebrahim Mahmood</h2>
-        <p>Student at Bonnabel Highschool</p>
-        <!--Interests section-->
-        <div id="Interests">
-          <h3>Interests</h3>
-          <ul>
-            <li> Travelling</li>
-            <li> Video Games</li>
-            <li> Cars</li>
-          </ul>
-        </div>
+         <img
+           class="sidebar-img"
+           src="https://s1.cdn.autoevolution.com/images/news/tuned-lamborghini-aventador-svj-sounds-like-an-f1-car-for-the-road-looks-the-part-too-186768_1.jpg"
+         />
        </div>
-    
-        <!-- Content section -->
-        <div class="Content">
-          
-        </div>
-      </main>
-  </div>
-    </body>
+
+
+       <!-- Content -->
+       <div class="Content">
+         <h2>Ebrahim Mahmood</h2>
+         <p>Student at Bonnabel Highschool</p>
+         <p> Certified in Photoshop</p>
+         <div class="Interests">
+           <h3>Interests</h3>
+           <ul>
+             <li>Cars</li>
+             <li>Traveling</li>
+             <li>Video Games</li>
+           </ul>
+         </div>
+       </div>
+     </main>
+   </div>
+ </body>
 </html>
